--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -54,6 +54,18 @@
 	            <input type="radio" name="createdByLog" value="0" ng-checked="data.createdByLog == 0" ng-model="data.createdByLog">By login
 	        </label>
        </div>
+       
+       <div class="form-group" ng-show="group0">
+	        <label>User Editable &nbsp;&nbsp;</label>
+	        <label class="radio-inline">
+	            <input type="radio" name="userEditable" value="1" ng-checked="data.userEditable == 1" ng-model="data.userEditable">Yes
+	        </label>
+	        <label class="radio-inline">
+	            <input type="radio" name="userEditable" value="0" ng-checked="data.userEditable == 0" ng-model="data.userEditable">No
+	        </label>
+       </div>
+       
+       
 	</div>
 	<div class="col-md-6" style="margin-top: 15px; color: #337AB7;" ng-show="group0">
 		<div class="panel panel-default">
