--- a/backend/src/main/webapp/app/views/dym_list/main.html
+++ b/backend/src/main/webapp/app/views/dym_list/main.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="panel-body" style="padding: 3px;">
                 	<div class="row" style="margin-bottom: 3px;">
-	                	<div class="col-md-12"> {{ menu }}
+	                	<div class="col-md-12">
 		                	<button type="button" style="margin-left: 3px;" class="btn btn-success pull-right" ng-disabled="!(menu == 1)" ng-click="navigate(2)">
 								Payment Method
 							</button>
