--- a/backend/src/main/webapp/app/views/dym_list/payType.html
+++ b/backend/src/main/webapp/app/views/dym_list/payType.html
@@ -4,6 +4,37 @@
 }
 </style>
 
-<div ui-view>
-	88888
+<div class="table-responsive">
+	<table class="table table-striped table-hover">
+		<thead>
+			<tr style="color: #337AB7;">
+				<th style="width: 5%;">#</th>
+				<th>ชื่อ</th>
+				<th></th>
+			</tr>
+		<thead>
+		<tbody>
+			<tr ng-repeat="item in payTypes" style="color: #337AB7;">
+				<td style="vertical-align: middle;">{{ $index + 1 }}</td>
+				<td style="vertical-align: middle;"><span editable-text="item.name" e-name="name" e-form="rowform">{{ item.name }}</span></td>
+				
+				<td style="vertical-align: middle;">
+					<form editable-form name="rowform" onbeforesave="updatePayType()" ng-show="rowform.$visible" class="form-buttons form-inline" shown="payTypeInserted == item">
+						<i class="fa fa-reply fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" ng-click="!item.isTemp ? rowform.$cancel() : cancelNewItem(item)" title="ยกเลิก"></i>&nbsp; 
+						<i class="fa fa-floppy-o fa-lg user-action-icon-primary" ng-disabled="rowform.$waiting" onclick="$(this.parentElement).submit()" title="บันทึก"></i>
+					</form>
+					<div class="buttons" ng-show="!rowform.$visible">
+						<i class="fa fa-times fa-lg user-action-icon-danger" ng-click="removeItem($index)" title="ลบ" ng-show="group0"></i>&nbsp; 
+						<i class="fa fa-pencil-square-o fa-lg user-action-icon-primary" ng-click="rowform.$show()" title="แก้ใข" ng-show="group0"></i>&nbsp;
+					</div>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+
+<div class="pull-right">
+	<button type="button" class="btn btn-primary btn-circle btn-sm" ng-click="addItem()" ng-show="group0">
+		<i class="fa fa-plus-square"></i>
+	</button>
 </div>
