--- a/backend/src/main/webapp/app/views/dym_list/payType.html
+++ b/backend/src/main/webapp/app/views/dym_list/payType.html
@@ -9,7 +9,7 @@
 		<thead>
 			<tr style="color: #337AB7;">
 				<th style="width: 5%;">#</th>
-				<th>ชื่อ</th>
+				<th>ประเภทการชำระ</th>
 				<th></th>
 			</tr>
 		<thead>
