--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -21,10 +21,10 @@
 					            <div class="input-group">
 								  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 								    <input type="text" id="dateFrom_traceCount" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
-								    	   ng-model="formData.dateFrom" placeholder="วันที่เริ่มต้น" ng-change="dateFromChange()" my-datepicker="dateConf">
+								    	   ng-model="formData.dateFrom" placeholder="วันที่เริ่มต้น" ng-change="dateFromChange(1)" my-datepicker="dateConf">
 								    <span class="input-group-addon">ถึง</span>
 								    <input type="text" id="dateTo_traceCount" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
-								    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" ng-change="dateToChange()" my-datepicker="dateConf">
+								    	   ng-model="formData.dateTo" placeholder="วันที่สิ้นสุด" ng-change="dateToChange(1)" my-datepicker="dateConf">
 								</div>
 							</div>
 						</div>
@@ -45,11 +45,18 @@
 		    <div class="col-xs-6" ng-show="!group6">
 		        <div class="panel panel-primary">
 		            <div class="panel-heading">แสดงผล Payment
-			            <div class="pull-right">
-			            	<small>
-		             			{{ formData.dateFrom ? 'ตั้งแต่':'' }} {{ formData.dateFrom | date:'dd/MM/yyyy' }} {{ formData.dateTo ? 'ถึง':'' }} {{ formData.dateTo | date:'dd/MM/yyyy' }}
-			            	</small>
-		             	</div>
+			            <div class="row form-inline">
+			            	<div class="col-xs-6 col-xs-offset-3" style="position: absolute; right: 6px; top: 6px;">
+					            <div class="input-group">
+								  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+								    <input type="text" id="dateFrom_payment" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
+								    	   ng-model="formData.dateFromPayment" placeholder="วันที่เริ่มต้น" ng-change="dateFromChange(2)" my-datepicker="dateConf">
+								    <span class="input-group-addon">ถึง</span>
+								    <input type="text" id="dateTo_payment" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
+								    	   ng-model="formData.dateToPayment" placeholder="วันที่สิ้นสุด" ng-change="dateToChange(2)" my-datepicker="dateConf">
+								</div>
+							</div>
+						</div>
 		            </div>
 		            <div class="panel-body">
 		                <canvas id="bar2" class="chart chart-bar" 
@@ -60,7 +67,7 @@
 		                		chart-colors="colors2"></canvas>	                		
 		            </div>
 		            <div class="panel-footer" style="text-align: right;">
-	                    <span ng-repeat="sum in bar2.sums"><u>{{ sum.label + ': ' + (sum.value | number:0) }}</u>&nbsp;&nbsp;&nbsp;</span>
+	                    <span ng-repeat="sum in bar2.sums"><u>{{ sum.label + ': ' + (sum.value | number: (sum.label == 'จำนวนบัญชีรวม' ? 0 : 2)) }}</u>&nbsp;&nbsp;&nbsp;</span>
 	                </div>
 		        </div>
 		    </div>
