--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -1,12 +1,12 @@
 <div>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12">
             <h1 class="page-header">Dashboard</h1>
         </div>
     </div>
     <div class="row">
     
-    	<div class="col-md-12" ng-show="!group6">
+    	<div class="col-xs-12" ng-show="!group6">
 			<div class="btn-group pull-right" style="margin: 0px 0 3px 0;">
 			  <button type="button" class="btn btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
 			</div>
