--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -17,7 +17,7 @@
 		        <div class="panel panel-primary">
 		            <div class="panel-heading">แสดงผลการติดตาม ({{ formData.isAll ? 'ทั้งหมด' : 'รายบัญชี' }})
 		            	<div class="row form-inline">
-			            	<div class="col-xs-6 col-xs-offset-3" style="position: absolute; right: 6px; top: 6px;">
+			            	<div class="col-xs-7" style="position: absolute; right: 6px; top: 6px;">
 					            <div class="input-group">
 								  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 								    <input type="text" id="dateFrom_traceCount" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
@@ -49,7 +49,7 @@
 		        <div class="panel panel-primary">
 		            <div class="panel-heading">แสดงผล Payment
 			            <div class="row form-inline">
-			            	<div class="col-xs-6 col-xs-offset-3" style="position: absolute; right: 6px; top: 6px;">
+			            	<div class="col-xs-6" style="position: absolute; right: 6px; top: 6px;">
 					            <div class="input-group">
 								  	<span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 								    <input type="text" id="dateFrom_payment" class="form-control input-sm" readonly="readonly" date-parser="dd/MM/yyyy" 
