--- a/backend/src/main/webapp/app/views/product/add.html
+++ b/backend/src/main/webapp/app/views/product/add.html
@@ -63,7 +63,6 @@
 	            <input type="radio" name="createdByLog" value="0" ng-checked="data.createdByLog == 0" ng-model="data.createdByLog">By login
 	        </label>
        </div>
-       
        <div class="form-group" ng-show="group0">
 	        <label>User Editable &nbsp;&nbsp;</label>
 	        <label class="radio-inline">
@@ -71,6 +70,15 @@
 	        </label>
 	        <label class="radio-inline">
 	            <input type="radio" name="userEditable" value="0" ng-checked="data.userEditable == 0" ng-model="data.userEditable">No
+	        </label>
+       </div>
+       <div class="form-group" ng-show="group0">
+	        <label>Upload Document &nbsp;&nbsp;</label>
+	        <label class="radio-inline">
+	            <input type="radio" name="showUploadDoc" value="1" ng-checked="data.showUploadDoc == 1" ng-model="data.showUploadDoc">Yes
+	        </label>
+	        <label class="radio-inline">
+	            <input type="radio" name="showUploadDoc" value="0" ng-checked="data.showUploadDoc == 0" ng-model="data.showUploadDoc">No
 	        </label>
        </div>
        
