--- a/backend/src/main/webapp/app/views/working/tab_forecast.html
+++ b/backend/src/main/webapp/app/views/working/tab_forecast.html
@@ -78,7 +78,7 @@
 		      	<td style="white-space: nowrap; vertical-align: middle; text-align: right;">
 			        <span editable-text="item.paidAmount" e-name="paidAmount" e-form="rowform" e-type="number">{{ item.paidAmount ? (item.paidAmount | number:2) : '' }}</span>
 		      	</td>
-		      	<td style="white-space: nowrap; vertical-align: middle;" class="fullwidth">
+		      	<td style="white-space: nowrap; vertical-align: middle; min-width: 300px;" class="fullwidth">
 			        <span editable-text="item.comment" e-name="comment" e-form="rowform">{{ item.comment }}</span>
 		      	</td>
 		      	<td style="white-space: nowrap; vertical-align: middle;">
