--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -34,10 +34,10 @@
 									<div class="row" style="margin-bottom: 3px;">
 										<div class="col-xs-12">
 											<div class="btn-group pull-right">
-												<button type="button" class="btn btn-primary btn-sm btn-outline active">ทั้งหมด</button>
-												<button type="button" class="btn btn-primary btn-sm btn-outline" >นัดชำระ</button>
-												<button type="button" class="btn btn-primary btn-sm btn-outline" >นัด Call</button>
-												<button type="button" class="btn btn-primary btn-sm btn-outline" >ทั่วไป</button>
+												<button type="button" class="btn btn-default btn-sm btn-outline active">ทั้งหมด</button>
+												<button type="button" class="btn btn-default btn-sm btn-outline" >นัดชำระ</button>
+												<button type="button" class="btn btn-default btn-sm btn-outline" >นัด Call</button>
+												<button type="button" class="btn btn-default btn-sm btn-outline" >ทั่วไป</button>
 											</div>
 										</div>
 									</div>
