--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -34,7 +34,7 @@
 									<div class="row" style="margin-bottom: 3px;">
 										<div class="col-xs-12">
 											<div class="btn-group pull-right">
-												<button type="button" class="btn btn-default btn-sm btn-outline active">ทั้งหมด</button>
+												<button type="button" class="btn btn-default btn-sm btn-outline active">ทั้งหมด <span class="badge" style="background-color: #a03b42;">3</span></button>
 												<button type="button" class="btn btn-default btn-sm btn-outline" >นัดชำระ</button>
 												<button type="button" class="btn btn-default btn-sm btn-outline" >นัด Call</button>
 												<button type="button" class="btn btn-default btn-sm btn-outline" >ทั่วไป</button>
