--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -1,17 +1,17 @@
 <div>
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="page-header">Dashboard</h1>
+            <h1 class="page-header">
+            	Dashboard
+            	<span class="btn-group">
+					<button type="button" class="btn btn-primary btn-sm btn-outline" style="min-width: 70px;" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">
+				  		<i class="glyphicon" ng-class="{'glyphicon-align-left': group.id == 1, 'glyphicon-align-center': group.id == 2}"></i>
+				  	</button>
+				</span>
+            </h1>
         </div>
     </div>
     <div class="row">
-    
-    	<div class="col-xs-12" ng-show="!group6">
-			<div class="btn-group pull-right" style="margin: 0px 0 3px 0;">
-			  <button type="button" class="btn btn-primary btn-outline" style="min-width: 70px;" ng-class="{'active': group.btnActive}" ng-repeat="group in groupDatas" ng-click="changeTab(group)">{{ group.name }}</button>
-			</div>
-		</div>
-    
     	<div ui-view>
 	    	<div class="col-xs-6">
 		        <div class="panel panel-primary">
