--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -1,16 +1,16 @@
 <div>
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-xs-12">
 			<h1 class="page-header">Notification</h1>
 		</div>
 	</div>
 	
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12">
 
 
 					<div class="row">
-						<div class="col-lg-6">
+						<div class="col-xs-6">
 							<div class="panel panel-primary">
 								<div class="panel-heading">
 									<i class="fa fa-bell fa-fw"></i> Notifications Panel
