--- a/backend/src/main/webapp/app/views/dashboard/home.html
+++ b/backend/src/main/webapp/app/views/dashboard/home.html
@@ -15,7 +15,7 @@
     	<div ui-view>
 	    	<div class="col-xs-6">
 		        <div class="panel panel-primary">
-		            <div class="panel-heading">แสดงข้อมูลการติดตาม ({{ formData.isAll ? 'ทั้งหมด' : 'รายบัญชี' }})
+		            <div class="panel-heading">ข้อมูลการติดตาม ({{ formData.isAll ? 'ทั้งหมด' : 'รายบัญชี' }})
 		            	<div class="row form-inline">
 			            	<div class="col-xs-7" style="position: absolute; right: 6px; top: 6px;">
 					            <div class="input-group">
@@ -47,7 +47,7 @@
 		    </div>
 		    <div class="col-xs-6" ng-show="!group6">
 		        <div class="panel panel-primary">
-		            <div class="panel-heading">แสดงข้อมูลการชำระ
+		            <div class="panel-heading">ข้อมูลการชำระ
 			            <div class="row form-inline">
 			            	<div class="col-xs-6" style="position: absolute; right: 6px; top: 6px;">
 					            <div class="input-group">
