--- a/backend/src/main/webapp/app/views/dashboard/collector.html
+++ b/backend/src/main/webapp/app/views/dashboard/collector.html
@@ -1,6 +1,6 @@
 <div class="col-xs-6">
     <div class="panel panel-primary">
-        <div class="panel-heading">แสดงข้อมูลการถืองาน</div>
+        <div class="panel-heading">ข้อมูลการถืองาน</div>
         <div class="panel-body">
             
             
