--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -28,10 +28,25 @@
 											<li><a style="cursor: default;">ทั่วไป</a></li>
 										</ul>
 									</div> -->
+									
+									
+									
+									
+										<div class="btn-group pull-right" style="bottom: 5px; right: -10px;">
+											<button type="button" class="btn btn-default btn-sm btn-outline active">ทั้งหมด <span class="badge" style="background-color: #a03b42; color: white;">3</span></button>
+											<button type="button" class="btn btn-default btn-sm btn-outline" >นัดชำระ</button>
+											<button type="button" class="btn btn-default btn-sm btn-outline" >นัด Call</button>
+											<button type="button" class="btn btn-default btn-sm btn-outline" >ทั่วไป</button>
+										</div>
+									
+									
+									
+									
+									
 								</div>
 								<!-- /.panel-heading -->
 								<div class="panel-body" style="padding: 3px;">
-									<div class="row" style="margin-bottom: 3px;">
+									<!-- <div class="row" style="margin-bottom: 3px;">
 										<div class="col-xs-12">
 											<div class="btn-group pull-right">
 												<button type="button" class="btn btn-default btn-sm btn-outline active">ทั้งหมด <span class="badge" style="background-color: #a03b42;">3</span></button>
@@ -40,7 +55,7 @@
 												<button type="button" class="btn btn-default btn-sm btn-outline" >ทั่วไป</button>
 											</div>
 										</div>
-									</div>
+									</div> -->
 									
 									<div class="row">
 										<div class="col-xs-12">
