--- a/backend/src/main/webapp/app/views/notification/main.html
+++ b/backend/src/main/webapp/app/views/notification/main.html
@@ -33,10 +33,10 @@
 									
 									
 										<div class="btn-group pull-right" style="bottom: 5px; right: -10px;">
-											<button type="button" class="btn btn-default btn-sm btn-outline active">ทั้งหมด <span class="badge" style="background-color: #a03b42; color: white;">3</span></button>
+											<button type="button" class="btn btn-default btn-sm btn-outline active">ทั้งหมด <!-- <span class="badge" style="background-color: #a03b42; color: white;">3</span> --></button>
 											<button type="button" class="btn btn-default btn-sm btn-outline" >นัดชำระ</button>
 											<button type="button" class="btn btn-default btn-sm btn-outline" >นัด Call</button>
-											<button type="button" class="btn btn-default btn-sm btn-outline" >ทั่วไป</button>
+											<!-- <button type="button" class="btn btn-default btn-sm btn-outline" >ทั่วไป</button> -->
 										</div>
 									
 									
